changes' is much more useful than 'misc edits' or 'code cleanup'.
3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------

The current configure.ac was already set to use the utils directory for auxillary
files, so the config.guess and config.sub in the top source directory were not
used, thus moved them to utils directory. (Before, locally created copies by
autogen.sh placed in utils/ would were used. Try removing them if svn complains
about already existing files). Also force update of all autoconf/automake files
to last versions. Also fix a minor issue with "inline" and "void" being in wrong
order in a function (gcc will handle it, but the C standard doesn't allow it).
 INSTALL
 common/map.c
 utils/depcomp
 utils/install-sh
 utils/missing
 utils/mkinstalldirs
Moved:
 config.guess to utils/config.guess
 config.sub to utils/config.sub
Arvid Norlander 2008-05-20

Fix some cases of using snprintf function with potentially untrusted data as
format parameter. Change two sprintf into snprintf. Add return value for all
code paths in a non-void returning function.
 common/path.c
 server/c_chat.c
 server/c_misc.c
 server/c_wiz.c
Arvid Norlander 2008-05-20

Update svn:ignore property for various directories in the server source,
in order to make it simpler to work with.
 (Lots of directories in the source tree, too many to list here)
Arvid Norlander 2008-05-20

Apply Patch #1966455: Fix for cut off NPC dialog messages.
 common/dialog.c
Arvid Norlander 2008-05-20

Apply Patch #1966113: Fix uninitialised range vector in monster.c.
 server/monster.c
Arvid Norlander 2008-05-20

Increase base book max size, to try to get more various messages.
 include/book.h
Nicolas Weeger 2008-05-19
