@@ -14,6 +14,12 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+Clean some log messages. Add the option to specify the animation to play
+through the 'message' sent as part of the event.
+ plugins/cfanim/cfanim.c
+ plugins/cfanim/include/cfanim_proto.h
+Nicolas Weeger 2008-05-20
+
 The current configure.ac was already set to use the utils directory for auxillary
 files, so the config.guess and config.sub in the top source directory were not
 used, thus moved them to utils directory. (Before, locally created copies by
